# mcp-healthcare

./: .gitignore  .linear_project.json  README.md  app_spec.txt  init.sh  pyproject.toml  requirements.txt
mcp_healthcare/: __init__.py  __main__.py  audit.py  cli.py  config.py  db.py  diagnostic.py  drug_checker.py  models.py  pathway.py
mcp_healthcare/data/: __init__.py  interactions.json
mcp_healthcare/data/pathways/: pneumonia.json
mcp_healthcare/data/rulesets/: sepsis_sirs.json
screenshots/: M2A-524-caching-verification.txt  M2A-524-fixes-summary.txt  M2A-524-test-results.txt  qa-regression-feature3.txt
tests/: __init__.py  conftest.py  test_audit.py  test_config.py  test_db.py  test_diagnostic.py  test_drug_interaction.py  test_models.py  test_pathway.py
