[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-healthcare"
version = "0.1.0"
description = "MCP Healthcare Clinical Decision Support Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_healthcare*"]
exclude = ["tests*", "screenshots*", "data*", "logs*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mcp-healthcare = "mcp_healthcare.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
